Mon Sep 15 14:22:30 2003  George Lebl <jirka@5z.com>

	* applet.c: cast properly to get rid of warning

2003-07-26  Kevin Vandersloot

	* Makefile.am: Add X_LIBS to fix build. Patch from Damien Carbery. Fixes
	bug #116702

2003-06-30  Bill Haneman

	* GNOME_AccessxApplet.xml:
	Changed context menu to "Keyboard Accessibility Preferences"

	* GNOME_AccessxStatusApplet.server.in.in:
	Put in "Utility" menu instead of "Accessories".

2003-06-15  Kevin Vandersloot

	* applet.c: Expand the applet for Fitts' law and bind both double click and
	enter/space for the keyboard accessibility pref dialog

2003-06-20  Abel Cheung  <maddog@linux.org.hk>

	* docs/C/accessx-status-C.omf: Fix wrong url.

2003-05-30  Kevin Vandersloot

	* applet.c: Get the icon right in the about dialog

2003-05-28  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am, pixmaps/Makefile.am: get the pixmapdirs correct
	
	* applet.c: search for pixmaps in the correct directory. Pass the GtkStyle of the box
	widget otherwise gtk_icon_set_render_icon won't work properly. Don't destroy the sapplet->box
	after removing it from teh container since it is unrefed when removed. 
	
	* .server.in.in: get the icon from the proper directory