@@ -1,0 +1,6 @@
+Makefile
+Makefile.in
+GNOME_AccessxStatusApplet.server.in
+GNOME_AccessxStatusApplet.server
+accessx-status-applet
+
