@@ -1,4 +1,5 @@
-Makefile.in
 Makefile
+Makefile.in
 omf_timestamp
 *.out
+
