@@ -1,4 +1,3 @@
 Makefile.in
 Makefile
-omf_timestamp
-*.out
+
