@@ -5,3 +5,5 @@ Makefile
 multiload-applet-2
 GNOME_MultiLoadApplet_Factory.server
 GNOME_MultiLoadApplet_Factory.server.in
+multiload.schemas
+
